--- a/bountyHunt/bountyHunt.csproj
+++ b/bountyHunt/bountyHunt.csproj
@@ -22,8 +22,17 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Reference Include="0Harmony">
+        <HintPath>..\..\..\New folder\core\0Harmony.dll</HintPath>
+      </Reference>
       <Reference Include="Assembly-CSharp">
         <HintPath>H:\SteamLibrary\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Assembly-CSharp.dll</HintPath>
+      </Reference>
+      <Reference Include="BepInEx">
+        <HintPath>..\..\..\New folder\core\BepInEx.dll</HintPath>
+      </Reference>
+      <Reference Include="BepInEx.Harmony">
+        <HintPath>..\..\..\New folder\core\BepInEx.Harmony.dll</HintPath>
       </Reference>
       <Reference Include="CsvTextFieldParser">
         <HintPath>..\..\..\..\..\..\.nuget\packages\csvtextfieldparser\1.2.2\lib\netstandard2.0\CsvTextFieldParser.dll</HintPath>
@@ -36,6 +45,9 @@
       </Reference>
       <Reference Include="Unity.TextMeshPro">
         <HintPath>H:\SteamLibrary\steamapps\common\Lethal Company\Lethal Company_Data\Managed\Unity.TextMeshPro.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine">
+        <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.dll</HintPath>
       </Reference>
       <Reference Include="UnityEngine.CoreModule">
         <HintPath>H:\SteamLibrary\steamapps\common\Lethal Company\Lethal Company_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
